packages/language/src/__tests__/__fixtures__/invalid/missing-timeline.eligian
// No timeline defined - should be a validation error

event intro at 0..5 {
  show #title
}

event outro at 10..15 {
  hide #title
}
